Login page working

--- a/templates/cart.html
+++ b/templates/cart.html
@@ -1,6 +1,8 @@
 
 {% extends 'base.html' %}
 
+{% block title %}Your Cart{% endblock %}
+
 {% block body %}
 
     <table class="table table-striped">
