--- a/templates/all_melons.html
+++ b/templates/all_melons.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %}Top Selling Melons{% endblock %}
+
 {% block body %}
     <h2>Top Selling Melons</h2>
 
