--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,6 +1,8 @@
 <html>
 
 <head>
+    {% if get_flashed_messages() %}{% endif %}
+
     <link rel="stylesheet"
           href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.css"/>
     <link rel="stylesheet" href="/static/css/homepage.css">
