--- a/templates/login.html
+++ b/templates/login.html
@@ -1,10 +1,9 @@
-<html>
-<head>
-  <title>Login</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-<form class="form-signin" method="POST">
+{% block title %}Login{% endblock %}
+
+{% block body %}
+<form class="form-signin" action="/login" method="POST">
 
   <h2 class="form-signin-heading">Please Sign In</h2>
 
@@ -31,7 +30,4 @@
   </button>
 
 </form>
-
-</body>
-</html>
-
+{% endblock %}
